Check_access
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape
PS C:\Users\AChava05\OneDrive - Kenvue\AChava05\RPM_Data_Prep_Pipeline> py .\download_result.py
  File "C:\Users\AChava05\OneDrive - Kenvue\AChava05\RPM_Data_Prep_Pipeline\download_result.py", line 2
    df=pd.read_parquet("C:\Users\AChava05\Downloads\merged_final_output.parquet")
                                                                                ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape
PS C:\Users\AChava05\OneDrive - Kenvue\AChava05\RPM_Data_Prep_Pipeline> 
